force-app/main/default/objects/purecloud__PureCloud_Campaign_Setting__c/purecloud__PureCloud_Campaign_Setting__c.object-meta.xml
<CustomObject>
    <description>Contains all required and optional settings for syncing Campaigns to Genesys Cloud Campaigns</description>
    <label>Genesys Cloud Campaign Setting</label>
    <nameField>
        <label>Genesys Cloud Campaign Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genesys Cloud Campaign Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>