force-app/main/default/objects/purecloud__PureCloud_Campaign_Setting__c/fields/purecloud__Agent_Owned_Column__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Agent_Owned_Column__c</fullName>
    <description>Read-only field populated with Campaign Management setting after you enable Agent Owned Dialing and click Save.</description>
    <inlineHelpText>Read-only field populated with Campaign Management setting after you enable Agent Owned Dialing and click Save.</inlineHelpText>
    <label>Agent Owned Column</label>
    <length>255</length>
    <type>Text</type>
</CustomField>