force-app/main/default/objects/purecloud__PureCloud_Campaign_Setting__c/fields/purecloud__Caller_ID_Name__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Caller_ID_Name__c</fullName>
    <label>Caller ID: Name</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>