force-app/main/default/objects/purecloud__PureCloud_Campaign_Setting__c/fields/purecloud__Caller_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Caller_ID_Number__c</fullName>
    <description>Phone number must be numbers only or E.164 format.</description>
    <inlineHelpText>Phone number must be numbers only or E.164 format.</inlineHelpText>
    <label>Caller ID: Phone Number</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>