force-app/main/default/objects/purecloud__PureCloud_Campaign_Setting__c/fields/purecloud__Dialing_Mode__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Dialing_Mode__c</fullName>
    <label>Dialing Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preview Dialing</fullName>
                <default>true</default>
                <label>Preview Dialing</label>
            </value>
            <value>
                <fullName>Progressive Dialing</fullName>
            </value>
            <value>
                <fullName>Predictive Dialing</fullName>
            </value>
            <value>
                <fullName>Power Dialing</fullName>
            </value>
            <value>
                <fullName>Agentless Dialing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>