force-app/main/default/objects/purecloud__PureCloud_Campaign_Setting__c/fields/purecloud__Division__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Division__c</fullName>
    <label>Division</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Please configure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>