force-app/main/default/objects/purecloud__PureCloud_Campaign_Setting__c/fields/purecloud__Enable_Agent_Owned__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Enable_Agent_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Routes interactions to assigned agents. Setting cannot be changed while Genesys Cloud campaigns are associated.</description>
    <inlineHelpText>Routes interactions to assigned agents. Setting cannot be changed while Genesys Cloud campaigns are associated.</inlineHelpText>
    <label>Enable Agent Owned Dialing</label>
    <type>Checkbox</type>
</CustomField>