force-app/main/default/objects/purecloud__PureCloud_Campaign_Setting__c/fields/purecloud__Genesys_Cloud_Site__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Genesys_Cloud_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Genesys Cloud Site</label>
    <referenceTo>purecloud__Genesys_Cloud_Site__c</referenceTo>
    <relationshipLabel>Genesys Cloud Campaign Settings</relationshipLabel>
    <relationshipName>Genesys_Cloud_Campaign_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>