force-app/main/default/objects/purecloud__PureCloud_Campaign_Setting__c/fields/purecloud__PureCloud_Call_Rule_Set__c.field-meta.xml
<CustomField>
    <fullName>purecloud__PureCloud_Call_Rule_Set__c</fullName>
    <label>Genesys Cloud Call Rule Set</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Please configure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>