force-app/main/default/objects/purecloud__PureCloud_Campaign_Setting__c/fields/purecloud__PureCloud_Callable_Time_Set__c.field-meta.xml
<CustomField>
    <fullName>purecloud__PureCloud_Callable_Time_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Genesys Cloud Contactable Time Set</label>
    <referenceTo>purecloud__PureCloud_Callable_Time_Set__c</referenceTo>
    <relationshipLabel>Genesys Cloud Campaign Settings</relationshipLabel>
    <relationshipName>PureCloud_Campaign_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>