force-app/main/default/objects/purecloud__PureCloud_Campaign_Setting__c/fields/purecloud__PureCloud_Script__c.field-meta.xml
<CustomField>
    <fullName>purecloud__PureCloud_Script__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Genesys Cloud Script</label>
    <referenceTo>purecloud__PureCloud_Script__c</referenceTo>
    <relationshipLabel>Genesys Cloud Campaign Settings</relationshipLabel>
    <relationshipName>PureCloud_Campaign_Settings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>