force-app/main/default/objects/purecloud__PureCloud_Campaign_Setting__c/fields/purecloud__Skip_Preview__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Skip_Preview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Preview</label>
    <type>Checkbox</type>
</CustomField>