force-app/main/default/objects/purecloud__PureCloud_Campaign_Setting__c/fields/purecloud__Sort_List_Ascending__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Sort_List_Ascending__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sort List Ascending</label>
    <type>Checkbox</type>
</CustomField>