force-app/main/default/objects/purecloud__PureCloud_Campaign_Setting__c/fields/purecloud__Sort_List_Numerically__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Sort_List_Numerically__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sort List Numerically</label>
    <type>Checkbox</type>
</CustomField>