force-app/main/default/objects/purecloud__PureCloud_Campaign_Setting__c/validationRules/purecloud__Caller_ID_Number_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>purecloud__Caller_ID_Number_Format</fullName>
    <active>true</active>
    <description>Phone number must be numbers only or E.164 format.</description>
    <errorConditionFormula>NOT(REGEX( purecloud__Caller_ID_Number__c , &apos;^\\+?[1-9]\\d{1,14}$&apos;))</errorConditionFormula>
    <errorDisplayField>purecloud__Caller_ID_Number__c</errorDisplayField>
    <errorMessage>Phone number must be numbers only or E.164 format.</errorMessage>
</ValidationRule>