force-app/main/default/objects/purecloud__PureCloud_Campaign_Setting__c/validationRules/purecloud__CallResponse_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>purecloud__CallResponse_Required</fullName>
    <active>true</active>
    <description>A Call Response is required for Agent, Power, Progressive and Predictive Dialing modes.</description>
    <errorConditionFormula>AND( 
OR( 
ISPICKVAL(purecloud__Dialing_Mode__c, &apos;Predictive Dialing&apos;), 
ISPICKVAL(purecloud__Dialing_Mode__c, &apos;Progressive Dialing&apos;), 
ISPICKVAL(purecloud__Dialing_Mode__c, &apos;Agentless Dialing&apos;), 
ISPICKVAL(purecloud__Dialing_Mode__c, &apos;Power Dialing&apos;) 
), 
ISBLANK(purecloud__PureCloud_Call_Response__c))</errorConditionFormula>
    <errorMessage>A Call Response is required for this Dialing Mode.</errorMessage>
</ValidationRule>