force-app/main/default/objects/purecloud__PureCloud_Campaign_Setting__c/validationRules/purecloud__EdgeGroup_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>purecloud__EdgeGroup_Required</fullName>
    <active>true</active>
    <description>Validates that an edge group or a site is selected for Agentless, Predictive, Progressive and Power Modes.</description>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(purecloud__Dialing_Mode__c, &apos;Predictive Dialing&apos;), 
ISPICKVAL(purecloud__Dialing_Mode__c, &apos;Progressive Dialing&apos;),
ISPICKVAL(purecloud__Dialing_Mode__c, &apos;Agentless Dialing&apos;),
ISPICKVAL(purecloud__Dialing_Mode__c, &apos;Power Dialing&apos;)
),
AND(
ISBLANK(purecloud__PureCloud_Edge_Group__c),
ISBLANK(purecloud__Genesys_Cloud_Site__c)
))</errorConditionFormula>
    <errorMessage>An Edge Group or Site is required for this Dialing Mode.</errorMessage>
</ValidationRule>